--- a/package.xml
+++ b/package.xml
@@ -44,6 +44,7 @@
         <members>A161</members>
         <members>A16789</members>
         <members>A17</members>
+        <members>A18</members>
         <members>A19</members>
         <members>A20</members>
         <members>A201</members>
@@ -58,9 +59,16 @@
         <members>A35</members>
         <members>A55</members>
         <members>A57</members>
+        <members>A6</members>
+        <members>A7</members>
         <members>A97</members>
         <members>A98</members>
         <members>AAClsABPSiWR</members>
+        <members>AClassJHqLEEujkC</members>
+        <members>AClassJNMPYcoOGWvL</members>
+        <members>AClassJUDmVHqLr</members>
+        <members>AClassJVDicQsl</members>
+        <members>AClassJWqRrXHaj</members>
         <members>AN1</members>
         <members>ANew1</members>
         <members>ANew2</members>
