--- a/folder1/folder2/folder3/package.xml
+++ b/folder1/folder2/folder3/package.xml
@@ -3,6 +3,12 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AOZGddBpOrC</members>
+        <members>A190</members>
+        <members>A191</members>
+        <members>Acc1</members>
+        <members>Acc123</members>
+        <members>AccnTest5</members>
         <name>ApexClass</name>
     </types>
 </Package>
