--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,16 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A194</members>
+        <members>A1987</members>
+        <members>AClassIyKpXdRSGHur</members>
+        <members>AClassJCbvVodWnR</members>
+        <members>AClassJHqLEEujkC</members>
+        <members>AClassJMOKYSEkS</members>
+        <members>AClassJNMPYcoOGWvL</members>
+        <members>AN2</members>
+        <members>ANS1</members>
+        <members>ANew1</members>
         <name>ApexClass</name>
     </types>
 </Package>
